[gd_scene load_steps=5 format=2]

[ext_resource path="res://DamagePlain.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.305882, 0.431373, 0.215686, 1 )

[sub_resource type="BoxShape" id=3]

[node name="DamagePlain" type="MeshInstance"]
transform = Transform( 8.778, 0, 0, 0, 1, 0, 0, 0, 8.932, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88054, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
